[gd_scene load_steps=6 format=2]

[ext_resource path="res://main_panel.gd" type="Script" id=1]
[ext_resource path="res://resize_handle_vertical.gd" type="Script" id=2]
[ext_resource path="res://resize_handle_horizontal.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
CheckButton/styles/focus = SubResource( 1 )

[node name="main_panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0.215686, 0.215686, 1 )

[node name="main_screen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="main_screen"]
margin_top = 2.0
margin_right = 300.0
margin_bottom = 22.0
custom_constants/separation = 30
alignment = 1

[node name="name_plate" type="Label" parent="main_screen/HBoxContainer"]
margin_left = 8.0
margin_top = 3.0
margin_right = 149.0
margin_bottom = 17.0
text = "Hold This, Please v1.0"
align = 1
valign = 1

[node name="options" type="Button" parent="main_screen/HBoxContainer"]
margin_left = 179.0
margin_right = 227.0
margin_bottom = 20.0
hint_tooltip = "Editor Settings."
text = "Setup"

[node name="exit_button" type="Button" parent="main_screen/HBoxContainer"]
margin_left = 257.0
margin_right = 292.0
margin_bottom = 20.0
hint_tooltip = "Close program. 
Text inside will be remembered
next time you start it."
text = "Exit"

[node name="TextEdit" type="TextEdit" parent="main_screen"]
margin_top = 26.0
margin_right = 300.0
margin_bottom = 500.0
rect_min_size = Vector2( 300, 474 )
smooth_scrolling = true
wrap_enabled = true
caret_blink = true

[node name="options" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -124.0
margin_right = 136.0
margin_bottom = 124.0
custom_constants/separation = -8

[node name="instruction" type="Label" parent="options/VBoxContainer"]
margin_right = 272.0
margin_bottom = 48.0
text = "Controls:
Hold Middle-Click to drag this window.
F12 to toggle \"Always on top\" mode."

[node name="show_line_number" type="CheckButton" parent="options/VBoxContainer"]
margin_top = 40.0
margin_right = 272.0
margin_bottom = 80.0
text = "Show Line Numbers"

[node name="show_tabs" type="CheckButton" parent="options/VBoxContainer"]
margin_top = 72.0
margin_right = 272.0
margin_bottom = 112.0
text = "Show Tabs"

[node name="hightlight_current_line" type="CheckButton" parent="options/VBoxContainer"]
margin_top = 104.0
margin_right = 272.0
margin_bottom = 144.0
text = "Highlight Active Line"

[node name="highlight_selection_instances" type="CheckButton" parent="options/VBoxContainer"]
margin_top = 136.0
margin_right = 272.0
margin_bottom = 176.0
text = "Highlight Selection Duplicates"

[node name="draw_minimap" type="CheckButton" parent="options/VBoxContainer"]
margin_top = 168.0
margin_right = 272.0
margin_bottom = 208.0
text = "Draw MiniMap"

[node name="back" type="Button" parent="options/VBoxContainer"]
margin_top = 200.0
margin_right = 272.0
margin_bottom = 220.0
text = "Back"

[node name="resize_handle_vertical" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
mouse_default_cursor_shape = 9
script = ExtResource( 2 )

[node name="resize_handle_horizontal" type="Control" parent="."]
anchor_left = 0.987
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.100006
mouse_default_cursor_shape = 10
script = ExtResource( 3 )

[connection signal="pressed" from="main_screen/HBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="main_screen/HBoxContainer/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="toggled" from="options/VBoxContainer/show_line_number" to="." method="_on_show_line_number_toggled"]
[connection signal="toggled" from="options/VBoxContainer/show_tabs" to="." method="_on_show_tabs_toggled"]
[connection signal="toggled" from="options/VBoxContainer/hightlight_current_line" to="." method="_on_hightlight_current_line_toggled"]
[connection signal="toggled" from="options/VBoxContainer/highlight_selection_instances" to="." method="_on_highlight_selection_instances_toggled"]
[connection signal="toggled" from="options/VBoxContainer/draw_minimap" to="." method="_on_draw_minimap_toggled"]
[connection signal="pressed" from="options/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="gui_input" from="resize_handle_vertical" to="resize_handle_vertical" method="_on_resize_handle_vertical_gui_input"]
[connection signal="gui_input" from="resize_handle_horizontal" to="resize_handle_horizontal" method="_on_resize_handle_horizontal_gui_input"]
